--- a/src/components/uploadQuestion/styles.module.css
+++ b/src/components/uploadQuestion/styles.module.css
@@ -114,6 +114,13 @@
           display: flex;
           align-items: center;
       }
+      .add {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 25px;
+        margin: -18px ;
+    }
       .group div {
         width: 100%;
         margin-top: 10px;
@@ -123,5 +130,57 @@
         color: #fff;
         font-size: 18px;
         cursor: pointer;
+      }
+      @media (min-width: 300px) and (max-width: 700px) {
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .uploadquestion {
+            width: 350px;
+            height: 600px;
+            margin-left: 0px;
+        }
+        .header {
+            margin-bottom: 600px;
+        }
+        .contain {
+            margin-bottom: -40px;
+            /* margin */
+        }
+        .subjects {
+            margin-left: 90px;
+            margin-right: -75px;
+        }
+        .sub , .typ, .top{
+            margin: 0 -180px 80px 120px;
+        }
+        .submitBtn{
+            margin-bottom: 50px;
+          }
+        .inputElementQuestion {
+            width: 58%;
+            margin-left: 47px;
+            margin-top: 26px;
+        }
+        .add {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 25px;
+            margin: -18px ;
+        }
+        .inputElement ,.answers {
+            width: 58%;
+            margin-left: 57px;
+            margin-top: 26px;
+        }
+        .question ,.option ,.answer ,.solution {
+            margin: 0 -120px 0px 120px;
+        }
+        .group {
+            display: flex;
+        }
       }
   
